--- a/src/main/resources/templates/student/student.html
+++ b/src/main/resources/templates/student/student.html
@@ -19,9 +19,9 @@
   </a ></div >
 </div >
 
-<div class="container-fluid row" data-th-fragment="studentsFragment" >
+<div class="container-fluid row" >
   <div class="col-lg-1" ></div >
-  <div class="col-lg-10" >
+  <div class="col" data-th-fragment="studentsFragment" >
     <table class="table table-striped table-inverse table-responsive container" id="myTable" >
       <thead class="thead-inverse" >
       <tr >
@@ -60,6 +60,9 @@
           </a >
         </td >
         <td data-th-if="${studentRemoveBatch}" >
+          <a data-th-href="${'/student/view/'+ student.id}" >
+            <button class="btn btn-info" >View</button >
+          </a >
             <form action="/batchStudent/removeBatch" >
               <input type="hidden" name="batch" data-th-value="${batchDetail.id}">
               <input type="hidden" name="student" data-th-value="${student.id}">
