payment add form partially completed

--- a/src/main/resources/templates/batch/batch-detail.html
+++ b/src/main/resources/templates/batch/batch-detail.html
@@ -29,31 +29,31 @@
         <div class="form-group">
             <label data-th-for="${code}" class="col-sm-3 control-label">Class reference</label>
             <div class="col-sm-6">
-                <p type="text" id="code" class="form-control" data-th-text="*{batchDetail.code}">
+                <p type="text" id="code" class="form-control"   data-th-text="${batchDetail.code}">
             </div>
         </div>
         <div class="form-group">
             <label data-th-for="${year}" class="col-sm-3 control-label">Academic Year</label>
             <div class="col-sm-6">
-                <p type="text" id="year" class="form-control" data-th-text="*{batchDetail.year}">
+                <p type="text" id="year" class="form-control"   data-th-text="${batchDetail.year}">
             </div>
         </div>
         <div class="form-group">
             <label data-th-for="${grade}" class="col-sm-3 control-label">Grade</label>
             <div class="col-sm-6">
-                <p type="text" id="grade" class="form-control" data-th-text="*{batchDetail.grade}">
+                <p type="text" id="grade" class="form-control"   data-th-text="${batchDetail.grade}">
             </div>
         </div>
         <div class="form-group">
             <label data-th-for="${teacherName}" class="col-sm-3 control-label">Teacher</label>
             <div class="col-sm-6">
-                <p type="text" id="teacherName" class="form-control" data-th-text="*{batchDetail.teacher.firstName}">
+                <p type="text" id="teacherName" class="form-control"   data-th-text="${batchDetail.teacher.firstName}">
             </div>
         </div>
         <div class="form-group">
             <label data-th-for="${'name'}" class="col-sm-3 control-label"> Name</label>
             <div class="col-sm-6">
-                <p type="text" id="name" class="form-control" data-th-text="*{batchDetail.name}">
+                <p type="text" id="name" class="form-control"   data-th-text="${batchDetail.name}">
             </div>
         </div>
 
