--- a/src/main/resources/templates/employee/employee-detail.html
+++ b/src/main/resources/templates/employee/employee-detail.html
@@ -175,7 +175,7 @@
                         <label class="control-label" for="dateOfAssignment">Date Of Assignment :</label>
                     </div>
                     <div class="col-md-8">
-                        <p id="dateOfAssignment" data-th-text="${{employeeDetail.dateOfAssignment}}" class="display_detail"></p>
+                        <p id="dateOfAssignment"  data-th-text="${employeeDetail.dateOfAssignment}}" class="display_detail"></p>
                     </div>
                 </div>
                 <div class="form-row text-right">
@@ -207,7 +207,7 @@
                         <label class="control-label" for="updatedAt">Updated At :</label>
                     </div>
                     <div class="col-md-8">
-                        <p id="updatedAt" data-th-text="${{employeeDetail.updatedAt}}" class="display_detail"></p>
+                        <p id="updatedAt"  data-th-text="${employeeDetail.updatedAt}}" class="display_detail"></p>
                     </div>
                 </div>
             </div>
@@ -231,7 +231,7 @@
                                         <div class="card-footer bg-secondary text-light text-center">
                                             <p id="imgName" data-th-text="${file.filename}"></p>
                                             <span> Uploaded Date :
-                                            <p id="imgCreateAt" data-th-text="${{file.createAt}}"></p>
+                                            <p id="imgCreateAt"  data-th-text="${file.createAt}}"></p>
                                             </span>
                                         </div>
                                     </div>
