--- a/src/main/resources/templates/hall/hall-detail.html
+++ b/src/main/resources/templates/hall/hall-detail.html
@@ -31,36 +31,36 @@
         <div class="form-group">
             <label data-th-for="${id}" class="col-sm-3 control-label">Hall ID</label>
             <div class="col-sm-6">
-                <p type="text" id="id" class="form-control" data-th-text="*{hallDetail.id}">
+                <p type="text" id="id" class="form-control"   data-th-text="${hallDetail.id}">
             </div>
         </div>
         <div class="form-group">
             <label data-th-for="${number}" class="col-sm-3 control-label">Hall Number</label>
             <div class="col-sm-6">
-                <p type="text" id="number" class="form-control" data-th-text="*{hallDetail.number}">
+                <p type="text" id="number" class="form-control"   data-th-text="${hallDetail.number}">
             </div>
         </div><div class="form-group">
         <label data-th-for="${number}" class="col-sm-3 control-label">Hall Name</label>
         <div class="col-sm-6">
-            <p type="text" id="name" class="form-control" data-th-text="*{hallDetail.name}">
+            <p type="text" id="name" class="form-control"   data-th-text="${hallDetail.name}">
         </div>
     </div>
         <div class="form-group">
             <label data-th-for="${hallCondition}" class="col-sm-3 control-label">Hall Condition</label>
             <div class="col-sm-6">
-                <p type="text" id="hallCondition" class="form-control" data-th-text="*{hallDetail.hallCondition.hallCondition}">
+                <p type="text" id="hallCondition" class="form-control"   data-th-text="${hallDetail.hallCondition.hallCondition}">
             </div>
         </div>
         <div class="form-group">
             <label data-th-for="${seatCount}" class="col-sm-3 control-label">Seating Count</label>
             <div class="col-sm-6">
-                <p type="text" id="seatCount" class="form-control" data-th-text="*{hallDetail.seatCount}">
+                <p type="text" id="seatCount" class="form-control"   data-th-text="${hallDetail.seatCount}">
             </div>
         </div>
         <div class="form-group">
             <label data-th-for="${hallLocation}" class="col-sm-3 control-label">hallLocation</label>
             <div class="col-sm-6">
-                <p type="text" id="hallLocation" class="form-control" data-th-text="*{hallDetail.hallLocation}">
+                <p type="text" id="hallLocation" class="form-control"   data-th-text="${hallDetail.hallLocation}">
             </div>
         </div>
 
