--- a/src/main/resources/templates/school/school-detail.html
+++ b/src/main/resources/templates/school/school-detail.html
@@ -29,13 +29,13 @@
         <div class="form-group">
             <label data-th-for="${id}" class="col-sm-3 control-label">School ID</label>
             <div class="col-sm-6">
-                <p type="text" id="ID" class="form-control" data-th-text="*{schoolDetail.id}">
+                <p type="text" id="ID" class="form-control"   data-th-text="${schoolDetail.id}">
             </div>
         </div>
         <div class="form-group">
             <label data-th-for="${school}" class="col-sm-3 control-label">School name</label>
             <div class="col-sm-6">
-                <p type="text" id="school" class="form-control" data-th-text="*{schoolDetail.school}">
+                <p type="text" id="school" class="form-control"   data-th-text="${schoolDetail.school}">
             </div>
         </div>
 
