--- a/src/main/resources/templates/employee/addEmployee.html
+++ b/src/main/resources/templates/employee/addEmployee.html
@@ -312,7 +312,7 @@
                 <label class="control-label" for="createdAt" >Created At :</label >
               </div >
               <div class="col-md-8" >
-                <input id="createdAt" data-th-text="${{createdAt}}" class="form-control" type="text"
+                <input id="createdAt"  data-th-text="${createdAt}}" class="form-control" type="text"
                        readonly />
               </div >
             </div >
