--- a/src/main/resources/templates/subject/subject-detail.html
+++ b/src/main/resources/templates/subject/subject-detail.html
@@ -108,19 +108,19 @@
         <div class="form-group">
             <label data-th-for="${id}" class="col-sm-3 control-label">Index</label>
             <div class="col-sm-6">
-                <p type="text" id="id" class="form-control" data-th-text="*{subjectDetail.id}">
+                <p type="text" id="id" class="form-control"   data-th-text="${subjectDetail.id}">
             </div>
         </div>
         <div class="form-group">
             <label data-th-for="${name}" class="col-sm-3 control-label">Subject name</label>
             <div class="col-sm-6">
-                <p type="text" id="name" class="form-control" data-th-text="*{subjectDetail.name}">
+                <p type="text" id="name" class="form-control"   data-th-text="${subjectDetail.name}">
             </div>
         </div>
         <div class="form-group">
             <label data-th-for="${code}" class="col-sm-3 control-label">Subject code</label>
             <div class="col-sm-6">
-                <p type="text" id="code" class="form-control" data-th-text="*{subjectDetail.code}">
+                <p type="text" id="code" class="form-control"   data-th-text="${subjectDetail.code}">
             </div>
         </div>
         <div class="row container-fluid">
