--- a/src/main/resources/templates/payment/payment-detail.html
+++ b/src/main/resources/templates/payment/payment-detail.html
@@ -29,31 +29,37 @@
         <div class="form-group">
             <label data-th-for="${id}" class="col-sm-3 control-label">Transaction ID</label>
             <div class="col-sm-6">
-                <p type="text" id="id" class="form-control"   data-th-text="${paymentDetail.id}">
+                <p type="text" id="id" class="form-control"   data-th-text="${paymentDetail.code}">
             </div>
         </div>
         <div class="form-group">
             <label data-th-for="${discountStatus}" class="col-sm-3 control-label">Discount status</label>
             <div class="col-sm-6">
-                <p type="text" id="discountStatus" class="form-control"   data-th-text="${paymentDetail.discountStatus}">
+                <p type="text" id="discountStatus" class="form-control"   data-th-text="${paymentDetail.amount}">
+            </div>
+        </div>
+        <div class="form-group">
+            <label data-th-for="${discountStatus}" class="col-sm-3 control-label">Student Name</label>
+            <div class="col-sm-6">
+                <p type="text" id="studentName" class="form-control"   data-th-text="${paymentDetail.batchStudent.student.firstName}">
             </div>
         </div>
         <div class="form-group">
             <label data-th-for="${amount}" class="col-sm-3 control-label">Amount</label>
             <div class="col-sm-6">
-                <p type="text" id="amount" class="form-control"   data-th-text="${paymentDetail.amount}">
+                <p type="text" id="amount" class="form-control"   data-th-text="${paymentDetail.paymentStatus.paymentStatus}">
             </div>
         </div>
         <div class="form-group">
             <label data-th-for="${createdTime}" class="col-sm-3 control-label">Time</label>
             <div class="col-sm-6">
-                <p type="text" id="createdTime" class="form-control"   data-th-text="${paymentDetail.createdTime}">
+                <p type="text" id="createdTime" class="form-control"   data-th-text="${paymentDetail.month}">
             </div>
         </div>
         <div class="form-group">
             <label data-th-for="${createdDate}" class="col-sm-3 control-label">Date</label>
             <div class="col-sm-6">
-                <p type="text" id="createdDate" class="form-control"   data-th-text="${paymentDetail.createdDate}">
+                <p type="text" id="createdDate" class="form-control"   data-th-text="${paymentDetail.liveDead.liveDead}">
             </div>
         </div>
         <div class="form-group">
