checked all entities according to DB hiarrachy. batch module almost done as per entering.but it's not synchronized with student registration module & time table module in this stage....
......................
I'll start to link relevent pages to main window from my end & I'll commit + push

--- a/src/main/resources/templates/student/student.html
+++ b/src/main/resources/templates/student/student.html
@@ -44,7 +44,7 @@
         <td data-th-text="${student.firstName}" ></td >
         <td data-th-text="${student.gender}" ></td >
         <td data-th-text="${student.city}" ></td >
-        <td data-th-text="${student.school.name}" ></td >
+        <td data-th-text="${student.school}" ></td >
         <td data-th-text="${student.guardian}" ></td >
         <td data-th-text="${student.mobile}" ></td >
         <td data-th-text="${student.home}" ></td >
