Student attendance backend  was partially completed

--- a/src/main/resources/templates/payment/addAllBatchPayment.html
+++ b/src/main/resources/templates/payment/addAllBatchPayment.html
@@ -247,10 +247,13 @@
     </div >
   </div >
 </form >
-<!-- /form -->
 <!--footer is included-->
 <div data-th-replace="~{fragments/footer :: footerFragment}" ></div >
 <!--script is included-->
 <div data-th-replace="~{fragments/script :: scriptFragment}" ></div >
+<script >
+  //todo-> javascript part
+
+</script >
 </body >
 </html >
