Attendance backend was completed

--- a/src/main/resources/templates/timeTable/timeTableView.html
+++ b/src/main/resources/templates/timeTable/timeTableView.html
@@ -57,6 +57,9 @@
             <a data-th-href="${'/timeTable/view/'+ timeTable.id}" >
               <button class="btn btn-info" >View</button >
             </a >
+            <a data-th-href="${'/timeTableStudentAttendance/'+ timeTable.id}" >
+              <button class="btn btn-primary" >Attendance</button >
+            </a >
           </td >
         </tr >
         </tbody >
