Batch html was modified becoze of exam

--- a/src/main/resources/templates/batch/batch.html
+++ b/src/main/resources/templates/batch/batch.html
@@ -57,7 +57,7 @@
                     <a data-th-href="${'/batch/delete/'+ batch.id}">
                         <button type="button" class="btn btn-danger">Delete</button>
                     </a>
-                    <a data-th-href="${'/batchExam/'+ batch.id}">
+                    <a data-th-href="${'/batchExam/add/'+ batch.id}">
                         <button type="button" class="btn btn-warning">Add Exam</button>
                     </a>
                 </td>
