--- a/src/main/resources/templates/batchExamResult/addBatchExamResult.html
+++ b/src/main/resources/templates/batchExamResult/addBatchExamResult.html
@@ -40,55 +40,82 @@
 <div class="container-fluid" >
   <form action="/batchStudentExamResult" data-th-object="${batchExam}" method="post" >
     <div class="form-row" >
-        <input class="form-control" data-th-field="*{id}" readonly type="hidden" >
-        <input class="form-control" data-th-field="*{liveDead}" readonly type="hidden" >
-<div class="container-fluid">
-  <table class="table table-striped table-inverse table-responsive" >
-    <thead class="thead-inverse" >
-    <tr >
-      <th >Index</th >
-      <th >Student Name</th >
-      <th data-th-if="${addStatus}">Exam Code </th >
-      <th >Attendance</th >
-      <th data-th-if="${addStatus}">Mark</th >
-      <th data-th-if="${addStatus}">Result Grade</th >
-      <th>Remark</th>
-    </tr >
-    </thead >
-    <tbody >
-    <tr data-th-each="batchStudentExamResult, index : ${batchExam.batchStudentExamResults}">
-      <td >
-        <span data-th-text="${index.count}"></span>
-        <input class="form-control" type="hidden" data-th-field="*{batchStudentExamResults[__${index.index}__].id}">
-        <input class="form-control" type="hidden" data-th-field="*{batchStudentExamResults[__${index.index}__].liveDead}">
-        <input class="form-control" type="hidden" data-th-field="*{batchStudentExamResults[__${index.index}__].batchStudent.id}">
-        <input class="form-control" type="hidden" data-th-field="*{batchStudentExamResults[__${index.index}__].batchExam.id}">
-      </td >
-      <td >
-        <span data-th-text="${batchStudentExamResult.batchStudent.student.firstName}"></span>
-      </td >
-      <td data-th-if="${addStatus}">
-        <input class="form-control" type="text" data-th-field="*{batchStudentExamResults[__${index.index}__].code}" readonly>
-      </td >
-      <td >
-        <input class="form-control" type="text" data-th-field="*{batchStudentExamResults[__${index.index}__].attendanceStatus}" readonly>
-      </td >
-      <td data-th-if="${addStatus}">
-        <!--todo-->
-        <input class="form-control" type="number" data-th-field="*{batchStudentExamResults[__${index.index}__].mark}" readonly>
-      </td >
-      <td data-th-if="${addStatus}">
-        <!--todo-->
-        <input class="form-control" type="text" data-th-field="*{batchStudentExamResults[__${index.index}__].resultGrade}" readonly>
-      </td >
-      <td>
-        <textarea class="form-control" data-th-field="*{batchStudentExamResults[__${index.index}__].remark}" ></textarea >
-      </td>
-    </tr >
-    </tbody >
-  </table >
-</div>
-    </div>
+      <input class="form-control" data-th-field="*{id}" readonly type="hidden" >
+      <input class="form-control" data-th-field="*{liveDead}" readonly type="hidden" >
+      <div class="container-fluid" >
+        <table class="table table-striped table-inverse table-responsive" >
+          <thead class="thead-inverse" >
+          <tr >
+            <th >Index</th >
+            <th >Student Name</th >
+            <th data-th-if="${addStatus}" >Exam Code</th >
+            <th data-th-if="${addStatus==false}">Attendance</th >
+            <th data-th-if="${addStatus}" >Mark</th >
+            <th data-th-if="${addStatus}" >Result Grade</th >
+            <th >Remark</th >
+          </tr >
+          </thead >
+          <tbody >
+          <tr data-th-each="batchStudentExamResult, index : ${batchExam.batchStudentExamResults}" >
+            <td >
+              <span data-th-text="${index.count}" ></span >
+              <input class="form-control" type="hidden"
+                     data-th-field="*{batchStudentExamResults[__${index.index}__].id}" >
+              <input class="form-control" type="hidden"
+                     data-th-field="*{batchStudentExamResults[__${index.index}__].liveDead}" >
+              <input class="form-control" type="hidden"
+                     data-th-field="*{batchStudentExamResults[__${index.index}__].batchStudent.id}" >
+              <input class="form-control" type="hidden"
+                     data-th-field="*{batchStudentExamResults[__${index.index}__].batchExam.id}" >
+              <input class="form-control" type="hidden" readonly
+                     data-th-field="*{batchStudentExamResults[__${index.index}__].attendanceStatus}"
+                     data-th-if="${addStatus}" >
+            </td >
+            <td >
+              <span data-th-text="${batchStudentExamResult.batchStudent.student.firstName}" ></span >
+            </td >
+            <td data-th-if="${addStatus}" >
+              <input class="form-control" type="text"
+                     data-th-field="*{batchStudentExamResults[__${index.index}__].code}" readonly >
+            </td >
+            <td data-th-if="${addStatus==false}">
+              <div class="custom-control custom-checkbox custom-control-inline "
+                   data-th-each="attendanceStatus,indexes : ${attendanceStatuses}"  >
+                <input class="custom-control-input" required
+                       data-th-name="${'batchStudentExamResults[__${index.index}__].attendanceStatus'}"
+                       data-th-value="${attendanceStatus}"
+                       data-th-id="${indexes.index}+${attendanceStatus}+${index.index}" type="radio"
+                       data-th-selected="${attendanceStatus==batchStudentExamResult.attendanceStatus}" />
+                <label class="custom-control-label"
+                       data-th-for="${indexes.index}+${attendanceStatus}+${index.index}"
+                       data-th-text="${attendanceStatus.attendanceStatus}" > radio
+                </label >
+              </div >
+            </td >
+            <td data-th-if="${addStatus}" >
+              <input class="form-control mark" type="number" data-th-id="${'mr'+index.index}" min="0" max="100"
+                     data-th-field="*{batchStudentExamResults[__${index.index}__].mark}"
+                     data-th-readonly="${batchStudentExamResult.attendanceStatus.attendanceStatus=='Absent'}" >
+            </td >
+            <td data-th-if="${addStatus}" >
+              <select data-th-id="${'rg'+index.index}"
+                      data-th-field="*{batchStudentExamResults[__${index.index}__].resultGrade}" readonly
+                      class="form-control" >
+                <option value="" >Please select</option >
+                <option data-th-each="resultGrade : ${resultGrades}"
+                        data-th-text="${resultGrade.resultGrade}"
+                        data-th-value="${resultGrade}" ></option >
+              </select >
+            </td >
+            <td >
+              <textarea class="form-control"
+                        data-th-field="*{batchStudentExamResults[__${index.index}__].remark}" ></textarea >
+            </td >
+          </tr >
+          </tbody >
+        </table >
+      </div >
+    </div >
 
     <!--button area-->
     <div class="row container-fluid" >
@@ -110,5 +137,50 @@
 <div data-th-replace="~{fragments/footer :: footerFragment}" ></div >
 <!--script is included-->
 <div data-th-replace="~{fragments/script :: scriptFragment}" ></div >
+<script data-th-if="${addStatus}" >
+    $(".mark").keyup(function () {
+        let enterValue = parseInt($(this).val());
+        let resultGradeID = 'rg' + $(this).attr('id').slice(2);
+        if (isNaN(enterValue)) {
+            document.getElementById(resultGradeID).value = '';
+        }
+        if (enterValue > 100) {
+            swal({
+                title: "Could you accept those mark.. !",
+                icon: "warning",
+                text: "Please check your enter mark",
+            })
+            $(this).val(0);
+            document.getElementById(resultGradeID).value = '';
+        }
+        console.log(enterValue);
+        if (enterValue <= 24) {
+            document.getElementById(resultGradeID).value = 'E';
+        } else if (enterValue <= 29) {
+            document.getElementById(resultGradeID).value = 'D';
+        } else if (enterValue <= 34) {
+            document.getElementById(resultGradeID).value = 'DP';
+        } else if (enterValue <= 39) {
+            document.getElementById(resultGradeID).value = 'CM';
+        } else if (enterValue <= 44) {
+            document.getElementById(resultGradeID).value = 'C';
+        } else if (enterValue <= 49) {
+            document.getElementById(resultGradeID).value = 'CP';
+        } else if (enterValue <= 54) {
+            document.getElementById(resultGradeID).value = 'BM';
+        } else if (enterValue <= 59) {
+            document.getElementById(resultGradeID).value = 'B';
+        } else if (enterValue <= 64) {
+            document.getElementById(resultGradeID).value = 'BP';
+        } else if (enterValue <= 69) {
+            document.getElementById(resultGradeID).value = 'AM';
+        } else if (enterValue <= 84) {
+            document.getElementById(resultGradeID).value = 'A';
+        } else if (enterValue <= 100) {
+            document.getElementById(resultGradeID).value = 'AP';
+        }
+
+    });
+</script >
 </body >
 </html >
